--- a/challenge.html
+++ b/challenge.html
@@ -16,7 +16,7 @@
 	<body ondragstart="return false" oncontextmenu="return false" onselectstart="return false">
 	<script>if (window != top) {location.href = location.href;}</script>
 	<div align="center" class="captcha-box" style="margin-top:150px"><div class="tit">
-	<img src="https://pics.xn--6n2ao17b.com/images/2020/03/05/4e075c86a4089626c1854d08e70d1d3f.gif" alt="" style="width:130px;padding-bottom:10px">
+	<img src="https://s1.ax1x.com/2020/03/17/8NFsHI.gif" alt="" style="width:130px;padding-bottom:10px">
 	</div>
 	<p style="font-weight: 800;font-size: 24px"><font color="#FF3E96">INTEL-2333的页面</font></p>
 	<p style="font-weight: 600;font-size: 17px">安全起见，小可爱请完成验证码再访问我的博客，蟹蟹啦！</p>
